--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
         "css-loader": "^5.2.4",
         "html-webpack-plugin": "^5.3.1",
         "mini-css-extract-plugin": "^1.5.0",
+        "sass": "^1.32.11",
+        "sass-loader": "^11.0.1",
         "style-loader": "^2.0.0",
         "ts-loader": "^9.1.1",
         "typescript": "^4.2.4",
