--- a/package.json
+++ b/package.json
@@ -3,18 +3,27 @@
     "version": "1.0.0",
     "scripts": {
         "start": "webpack serve --open",
-        "build": "webpack"
+        "build": "webpack",
+        "format": "prettier --write src/**/*.{js,jsx,ts,tsx}",
+        "lint": "eslint --fix src/**/*.{js,jsx,ts,tsx}"
     },
     "devDependencies": {
         "@types/react": "^17.0.3",
         "@types/react-dom": "^17.0.3",
+        "@typescript-eslint/eslint-plugin": "^4.22.0",
+        "@typescript-eslint/parser": "^4.22.0",
         "autoprefixer": "^10.2.5",
         "css-loader": "^5.2.4",
+        "eslint": "^7.25.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-react": "^7.23.2",
+        "eslint-webpack-plugin": "^2.5.4",
         "html-webpack-plugin": "^5.3.1",
         "mini-css-extract-plugin": "^1.5.0",
         "postcss": "^8.2.12",
         "postcss-loader": "^5.2.0",
         "postcss-preset-env": "^6.7.0",
+        "prettier": "^2.2.1",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
         "style-loader": "^2.0.0",
