--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
         "start": "webpack serve --open",
         "build": "webpack",
         "format": "prettier --write src/**/*.{js,jsx,ts,tsx}",
-        "lint": "eslint --fix src/**/*.{js,jsx,ts,tsx}"
+        "lint:code": "eslint --fix src/**/*.{js,jsx,ts,tsx}",
+        "lint:style": "stylelint --fix src/**/*.{css,scss,sass}"
     },
     "devDependencies": {
         "@types/react": "^17.0.3",
@@ -27,6 +28,9 @@
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
         "style-loader": "^2.0.0",
+        "stylelint": "^13.13.0",
+        "stylelint-config-standard": "^22.0.0",
+        "stylelint-webpack-plugin": "^2.1.1",
         "ts-loader": "^9.1.1",
         "typescript": "^4.2.4",
         "webpack": "^5.35.1",
