--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "stylelint-webpack-plugin": "^2.1.1",
         "ts-loader": "^9.1.1",
         "typescript": "^4.2.4",
+        "url-loader": "^4.1.1",
         "webpack": "^5.35.1",
         "webpack-cli": "^4.6.0",
         "webpack-dev-server": "^3.11.2"
