--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@typescript-eslint/eslint-plugin": "^4.22.0",
         "@typescript-eslint/parser": "^4.22.0",
         "autoprefixer": "^10.2.5",
+        "copy-webpack-plugin": "^8.1.1",
         "css-loader": "^5.2.4",
         "css-minimizer-webpack-plugin": "^2.0.0",
         "eslint": "^7.25.0",
